[package]
name = "gc2_derive"
version = "0.1.0"
authors = ["msizanoen1 <qtmlabs@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
synstructure = "0.12.3"
syn = { version = "1.0.15", features = ["visit-mut"] }
quote = "1.0.2"
proc-macro2 = "1.0.8"
